:memo: gateway document hazelcast module java properties